# Epistemap

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: bayesian-reliability.md  fair-play-detective-corpus.md  roadmap.md  scientific-change-and-g.md  temporal-epistemic-graphs.md
examples/detective_corpus/: README.md
examples/detective_corpus/candidates/: blue-carbuncle.json  purloined-letter-control.json  red-headed-league.json  speckled-band.json
examples/detective_corpus/sidecars/: detective_corpus_sidecars.json
examples/detective_corpus/sidecars/blue-carbuncle/: epistemap_graph.json  fair_play_diagnostic.json
examples/detective_corpus/sidecars/purloined-letter-control/: epistemap_graph.json  fair_play_diagnostic.json
examples/detective_corpus/sidecars/red-headed-league/: epistemap_graph.json  fair_play_diagnostic.json
examples/detective_corpus/sidecars/speckled-band/: epistemap_graph.json  fair_play_diagnostic.json
examples/detective_corpus/treatments/: detective_fair_play_pilot.json
src/epistemap/: __init__.py  algorithms.py  assessment_manifest.py  bayesian.py  cli.py  detective_corpus.py  epistemic.py  exporters.py  grounding_effect.py  ids.py  io.py  models.py  temporal.py  treatment_manifest.py  validation.py
tests/: test_algorithms.py  test_assessment_manifest.py  test_bayesian.py  test_cli.py  test_detective_corpus.py  test_detective_corpus_fixtures.py  test_epistemic.py  test_exporters.py  test_grounding_effect.py  test_temporal.py  test_treatment_manifest.py
